# yt

./: .gitignore  Procfile  README.md  app.py  pyproject.toml  railway.toml  requirements.txt  run.sh
.kiro/specs/youtube-video-downloader/: .config.kiro  design.md  requirements.md  tasks.md
deploy/: README.md  setup-server.sh  update-server.sh
tests/: conftest.py
youtube_downloader/: __init__.py  cli.py  download_engine.py  errors.py  format_converter.py  logging_config.py  metadata_retriever.py  models.py  playlist_downloader.py  progress_reporter.py  stream_selector.py  url_resolver.py  web_app.py
youtube_downloader/static/: app.js  style.css
youtube_downloader/templates/: index.html
